# dz

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: fedora.yml  macos.yml  main.yml  ubuntu.yml
012dz/: CMakeLists.txt
01dz/: CMakeLists.txt  HW.cxx
homework1/012dz/: CMakeLists.txt  HW.cxx  hello.cxx
homework1/01dz/: HW.cxx
homework2/: CMakeLists.txt
homework2/02-1-sdl-dynamic/: CMakeLists.txt  main.cxx
homework2/02-2-sdl-static/: CMakeLists.txt  main.cxx
homework2/sdl-dynamic/: CMakeLists.txt  main.cxx
homework2/sdl-static/: CMakeLists.txt
homework3/: CMakeLists.txt
homework3/first/: CMakeLists.txt  main.cxx
homework3/fourth/: CMakeLists.txt  engine.cxx  engine.hxx  game.cxx
homework3/second/: CMakeLists.txt  engine.cxx  engine.hxx  game.cxx
homework3/third/: CMakeLists.txt  engine.cxx
